--- a/AdvertiserCampaigns.html
+++ b/AdvertiserCampaigns.html
@@ -524,7 +524,7 @@
 
 <!-- AUDIT DRAWER -->
 <div id="auditDrawer" class="fixed inset-0 z-50 flex justify-end transition transform translate-x-full bg-black bg-opacity-30">
-  <div class="relative w-full max-w-md bg-white shadow-lg p-6 overflow-y-auto">
+  <div class="relative w-full max-w-2xl bg-white shadow-lg p-6 overflow-y-auto">
     <div class="flex justify-between items-center mb-4">
       <h2 class="text-lg font-semibold text-gray-900">Manual Entry Log</h2>
       <button data-close-drawer class="text-gray-500 hover:text-gray-700">
