--- a/AdvertiserCampaigns.html
+++ b/AdvertiserCampaigns.html
@@ -525,12 +525,13 @@
 <!-- AUDIT DRAWER -->
 <div id="auditDrawer" class="fixed inset-0 z-50 flex justify-end transition transform translate-x-full bg-black bg-opacity-30">
   <div class="relative w-full max-w-2xl bg-white shadow-lg p-6 overflow-y-auto">
-    <div class="flex justify-between items-center mb-4">
+    <div class="flex justify-between items-center mb-2">
       <h2 class="text-lg font-semibold text-gray-900" data-audit-context>Manual Entry Log</h2>
       <button data-close-drawer class="text-gray-500 hover:text-gray-700">
         ✕
       </button>
     </div>
+    <div class="-mx-2 my-2 border-b border-gray-300"></div>
     <div data-audit-list class="space-y-2 mb-4"></div>
 
     <div class="mt-4">
