--- a/AdvertiserCampaigns.html
+++ b/AdvertiserCampaigns.html
@@ -523,7 +523,7 @@
 
 
 <!-- AUDIT DRAWER -->
-<div id="auditDrawer" class="fixed inset-0 z-50 flex justify-end transition transform translate-x-full bg-black bg-opacity-30">
+<div id="auditDrawer" class="fixed right-0 bottom-0 z-50 flex justify-end transition transform translate-x-full bg-black bg-opacity-30" style="top: 56px; left: 0;">
   <div class="relative w-full max-w-2xl bg-white shadow-lg p-6 overflow-y-auto">
     <div class="flex justify-between items-center mb-2">
       <h2 class="text-lg font-semibold text-gray-900" data-audit-context>Manual Entry Log</h2>
@@ -534,11 +534,12 @@
     <div class="-mx-2 my-2 border-b border-gray-300"></div>
     <div data-audit-list class="space-y-2 mb-4"></div>
 
-    <div class="mt-4">
-      <label for="customInstructions" class="block text-sm font-medium text-gray-700">Custom Instructions</label>
-      <textarea id="customInstructions" rows="4" data-audit-notes class="mt-1 block w-full border border-gray-300 rounded-md p-2 text-sm text-gray-900"></textarea>
-    </div>
-
+<div class="mt-4">
+  <div class="-mx-2 px-4 py-1 mb-2 text-xs font-semibold text-gray-600 uppercase rounded-md" style="background-color: #d1d5db;">
+    Custom Instructions
+  </div>
+  <textarea id="customInstructions" rows="4" data-audit-notes class="block w-full border border-gray-300 rounded-md p-2 text-sm text-gray-900"></textarea>
+</div>
     <div class="mt-4 flex justify-between">
       <button data-clear class="bg-red-100 text-red-700 px-4 py-2 text-sm rounded-md hover:bg-red-200">Clear</button>
       <button disabled class="bg-blue-600 text-white px-4 py-2 text-sm rounded-md opacity-80 cursor-not-allowed">Export (Coming Soon)</button>
