--- a/CampaignDetails.html
+++ b/CampaignDetails.html
@@ -341,6 +341,24 @@
   <input id="deviceTargeting" type="text" class="hidden mt-1 w-full border border-gray-300 rounded px-3 py-2" />
 </div>
 
+<!-- Ad Server Section -->
+<hr class="border-gray-300" />
+<h2 class="text-lg font-semibold text-gray-900">Ad Server Fields</h2>
+
+<!-- Ad Server Campaign Name -->
+<div>
+  <label for="adServerCampaignName" class="block text-sm font-medium text-gray-700">Ad Server Campaign Name</label>
+  <span id="displayAdServerCampaignName" class="block mt-1 text-gray-800">N/A</span>
+  <input id="adServerCampaignName" type="text" class="hidden mt-1 w-full border border-gray-300 rounded px-3 py-2" />
+</div>
+
+<!-- Ad Server Campaign Vertical -->
+<div>
+  <label for="adServerCampaignVertical" class="block text-sm font-medium text-gray-700">Campaign Vertical</label>
+  <span id="displayAdServerCampaignVertical" class="block mt-1 text-gray-800">N/A</span>
+  <input id="adServerCampaignVertical" type="text" class="hidden mt-1 w-full border border-gray-300 rounded px-3 py-2" />
+</div>
+
               </div>
             </section>
 
@@ -360,7 +378,9 @@
   { span: 'displayCampaignDailyBudget', input: 'campaignDailyBudget' },
   { span: 'displayTargetAudience', input: 'targetAudience' },
   { span: 'displayGeoTargeting', input: 'geoTargeting' },
-  { span: 'displayDeviceTargeting', input: 'deviceTargeting' }
+  { span: 'displayDeviceTargeting', input: 'deviceTargeting' },
+  { span: 'displayAdServerCampaignName', input: 'adServerCampaignName' },
+  { span: 'displayAdServerCampaignVertical', input: 'adServerCampaignVertical' }
 ];
 
 
@@ -497,6 +517,8 @@
                                   if (now.targetAudience !== undefined) campaign.targetAudience = now.targetAudience;
                                   if (now.geoTargeting !== undefined) campaign.geoTargeting = now.geoTargeting;
                                   if (now.deviceTargeting !== undefined) campaign.deviceTargeting = now.deviceTargeting;
+                                  if (now.adServerCampaignName !== undefined) campaign.adServerCampaignName = now.adServerCampaignName;
+                                  if (now.adServerCampaignVertical !== undefined) campaign.adServerCampaignVertical = now.adServerCampaignVertical;
                                   
                                   campaignFound = true;
                                   break;
@@ -1175,6 +1197,8 @@ window.addEventListener('DOMContentLoaded', () => {
   safeSet('displayTargetAudience', campaign.targetAudience);
   safeSet('displayGeoTargeting', campaign.geoTargeting);
   safeSet('displayDeviceTargeting', campaign.deviceTargeting);
+  safeSet('displayAdServerCampaignName', campaign.adServerCampaignName);
+  safeSet('displayAdServerCampaignVertical', campaign.adServerCampaignVertical);
 
   // Set editable inputs
   safeInput('campaignName', campaign.name);
@@ -1191,6 +1215,8 @@ window.addEventListener('DOMContentLoaded', () => {
   safeInput('targetAudience', campaign.targetAudience);
   safeInput('geoTargeting', campaign.geoTargeting);
   safeInput('deviceTargeting', campaign.deviceTargeting);
+  safeInput('adServerCampaignName', campaign.adServerCampaignName);
+  safeInput('adServerCampaignVertical', campaign.adServerCampaignVertical);
 });
 
 
