--- a/AdvertiserCampaigns.html
+++ b/AdvertiserCampaigns.html
@@ -689,7 +689,7 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700 mb-1">Landing Page URL</label>
-                <input type="url" id="adServerLandingPageURL" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" placeholder="https://example.com" required>
+                <input type="text" id="adServerLandingPageURL" class="w-full border border-gray-300 rounded-md px-3 py-2 focus:ring-2 focus:ring-green-500 focus:border-green-500" placeholder="Enter any URL or value" required>
               </div>
             </div>
           </div>
